<resources>
    <string name="app_name">Get IMEI</string>
    <string name="not_access_imei">
        Data cannot be displayed because there is no access to it
    </string>
    <string name="never_permission_description">
        You must provide access to phone data to get IMEI
    </string>
    <string name="name_for_update_button">Update</string>
    <string name="version_title">Version: %s</string>
    <string name="imei_title">IMEI: %s</string>
    <string name="permission_description">This permission is required to display the current devices IMEI.</string>
    <string name="ok">ok</string>
    <string name="default_for_imei">Something went wrong, IMEI could not be determined</string>

    <string name="title_activity_main">Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu components -->
    <string name="user_info">User info</string>
    <string name="first_page">First page</string>
    <string name="second_page">News</string>
    <string name="imei_info">IMEI info</string>
    <string name="group_for_other">Other</string>
    <string name="settings_menu_component">Settings</string>
    <string name="logout">LogOut</string>

    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- UserInfo -->
    <string name="user_info_template">
        First name: %s\nLast name: %s\nPhone: %s\nEmail: %s\n
    </string>

    <string name="default_first_name">NoName</string>
    <string name="default_last_name">NoName</string>
    <string name="default_email">NoEmail@gmail.com</string>
    <string name="default_phone">NoPhone</string>

    <!-- Buttons -->
    <string name="edit_button_name">Edit</string>
    <string name="back_to_user_info">Back</string>
    <string name="save_user_info">Save</string>
    <string name="open_camera">Open camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="log_in_button_name">Log In</string>
    <string name="go_to_registration_button_name">Go to Registration</string>
    <string name="registration_button_name">Registration</string>

    <!-- Labels -->
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="news_resource_label">News resource</string>
    <string name="count_rss_in_cache_label">Count rss news for save in cache</string>

    <!-- Fragments names -->
    <string name="user_info_fragment_title">User Info</string>
    <string name="editing_user_info_fragment_title">Editing User Info</string>
    <string name="news_fragment_title">News</string>
    <string name="other_fragment_title">Other</string>
    <string name="about_fragment_title">About</string>


    <!-- Other -->
    <string name="place_for_news">Place for news</string>
    <string name="title_activity_login">Sign in</string>

    <!-- AlertDialog for logout !-->
    <string name="logout_description_for_dialog">Are you sure you want to log out?</string>
    <string name="positive_logout">Yes</string>
    <string name="negative_logout">No</string>

    <!-- AlertDialog for new avatar -->
    <string name="for_camera">Camera</string>
    <string name="for_gallery">Gallery</string>

    <!-- AlertDialog for change user -->
    <string name="change_data_request">You want to save changed data</string>

    <!-- Empty field error messages -->
    <string name="message_for_empty_email">Email field cannot be empty</string>
    <string name="message_for_empty_password">Password field cannot be empty</string>
    <string name="message_for_empty_confirm_password">Confirm password field cannot be empty</string>
    <string name="message_for_empty_first_name">First name field cannot be empty</string>
    <string name="message_for_empty_last_name">Last name field cannot be empty</string>
    <string name="message_for_empty_phone">Phone field cannot be empty</string>
    <string name="message_for_empty_fields">All field not be empty</string>

    <!-- invalid field messages -->
    <string name="massage_for_not_match_password">confirm password and password must match</string>
    <string name="message_for_email_not_found">User with this email does not exist</string>
    <string name="message_for_missing_password">Wrong password</string>

    <string name="message_for_already_email">The user with the e-mail: %s is already registered</string>

    <!-- Checking online -->
    <string name="online_message">You are online</string>
    <string name="offline_message">You are currently offline. News feed will not be updated</string>
    <string name="loaded_rss_feed">Click OK or swipe up to refresh the news feed</string>


    <!-- Validation -->
    <string name="invalid_rss_resource">Enter a valid Rss feed url</string>
</resources>
